# aiusage

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-binaries.yml
docs/: why.md
packaging/: pyinstaller_entry.py
packaging/aur/aiusage-tracker/: .SRCINFO  PKGBUILD
packaging/aur/python-pystray/: .SRCINFO  PKGBUILD
packaging/homebrew/: aiusage-tracker.rb
scripts/: install.ps1  install.sh  statusline.sh
src/aiusage/: __main__.py  cli.py  config.py  dashboard.py  models.py  notify.py  pricing.py  server.py  setup.py  statusline.py  tray.py
src/aiusage/providers/: claude.py  codex.py  common.py
